Add function link to the user page, resolve #34

--- a/course/templates/account/see.html
+++ b/course/templates/account/see.html
@@ -164,7 +164,7 @@
                     <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                         <div class="d-flex justify-content-between align-items-center w-100">
                             <strong class="text-gray-dark">His/Her Comment(s)</strong>
-                            <a class="text-muted" href="#">Coming Soon</a>
+                            <a href="{% url 'view_your_comment' aim_user.id %}">Go</a>
                         </div>
                         <span class="d-block">他 / 她的评论</span>
                     </div>
@@ -233,7 +233,7 @@
                     <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                         <div class="d-flex justify-content-between align-items-center w-100">
                             <strong class="text-gray-dark">His/Her Comment(s)</strong>
-                            <a class="text-muted" href="#">Coming Soon</a>
+                            <a href="{% url 'view_your_comment' aim_user.id %}">Go</a>
                         </div>
                         <span class="d-block">他 / 她的评论</span>
                     </div>
