fixed #35, mistake disabled signup btn

--- a/course/templates/course/signup.html
+++ b/course/templates/course/signup.html
@@ -194,7 +194,7 @@
             dataType: 'json',
             success: function (data) {
                 if (data.is_valid) {
-                    $("#id_invitationcodee").removeClass('is-invalid');
+                    $("#id_invitationcode").removeClass('is-invalid');
                     $("#id_invitationcode").addClass('is-valid');
                     $("#id_invitationcode_label").html('<span class="text-success">This Invitation Code is valid.</span>');
                 } else {
