--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -77,6 +77,7 @@
 
 <!-- Begin page content -->
 <main role="main" class="container">
+    <div style="margin-top: 1rem;"></div>
     {% if messages %}
         {% for message in messages %}
             {% if message.tags == 'success' %}
@@ -93,69 +94,69 @@
                 {% endif %}
             {% endif %}
         {{ message }}
+
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
         </div>
         {% endfor %}
     {% endif %}
-    <br>
-        <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-info rounded box-shadow">
-            <div class="lh-100" style="width: 100%;">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h1 class="mb-0 text-white lh-100">{{ coursedata.course_code | upper }}: {{ coursedata.course_name_en }}</h1>
-                    <h4 class="mb-0 text-white lh-100">hits: {{ coursedata.view_times }}</h4>
+                            <div class="row">
+        <div class="col-md-8 border-right">
+            <h1>{{coursedata.course_code | upper}}: {{ coursedata.course_name_en }}</h1>
+            <p class="lead">{{coursedata.course_name_cn}}</p>
+            <p class="text-muted">Updated {{coursedata.pub_date}}</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Course Code: <label class="badge badge-primary">{{coursedata.course_code | upper}}</label></li>
+                        <li class="list-group-item">Course Category: <label class="badge badge-info">{{coursedata.course_category}}</label></li>
+                        <li class="list-group-item">Course Units: <label class="badge badge-warning">{{coursedata.course_units}}</label></li>
+                    </ul>
                 </div>
-                <div class="d-flex justify-content-between align-items-center" style="margin-left: 0.5rem">
-                    <h2 class="text-white" style="margin-bottom: 0;">{{ coursedata.course_name_cn }}</h2>
+                <div class="col-md-6">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Division: <label class="badge badge-danger">{{coursedata.course_division}}</label></li>
+                        <li class="list-group-item">Major: <label class="badge badge-success">{{coursedata.course_major}}</label></li>
+                        <li class="list-group-item">Pre-Request: <label class="badge badge-dark">{% if coursedata.course_pre_request %}
+                            {{coursedata.course_pre_request}}
+                        {% else %}
+                        None
+                        {% endif %}</label></li>
+                    </ul>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">{{coursedata.course_descriptions}}
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card" style="margin-bottom: 1rem!important;">
+                <div class="card-header">
+                    <h4 class="card-text text-center">Overall Score</h4>
+                </div>
+                <div class="card-body">
+                    <p class="card-text text-center text-dark" style="font-size: 5rem">10/<span
+                            class="h2 text-secondary">10</span></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-text text-center">Quick Vote</h4>
+                </div>
+                <div class="card-body mx-auto">
+                    <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
+                        <button class="btn btn-outline-success" id="upvote_btn">
+                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                            15
+                        </button>
+                        <button class="btn btn-outline-danger" id="downvote_btn"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
-        </div>
     </div>
-    <div class="my-3 p-3 bg-white rounded box-shadow">
-        <h6 class="border-bottom border-gray pb-2 mb-0">Basic Info</h6>
-        <div class="media text-muted pt-3">
-            <img src="https://cdn.bootcss.com/open-iconic/1.1.1/svg/code.svg" class="mr-2 rounded"
-                 style="width: 32px; height: 32px;">
-            <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-                <strong class="d-block text-gray-dark">Course Code</strong>
-                {{ coursedata.course_code | upper }}
-            </p>
-        </div>
-        <div class="media text-muted pt-3">
-            <img src="https://cdn.bootcss.com/open-iconic/1.1.1/svg/box.svg" class="mr-2 rounded"
-                 style="width: 32px; height: 32px;">
-            <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-                <strong class="d-block text-gray-dark">Course Category</strong>
-                {{ coursedata.course_category }}
-            </p>
-        </div>
-        <div class="media text-muted pt-3">
-            <img src="https://cdn.bootcss.com/open-iconic/1.1.1/svg/lightbulb.svg" class="mr-2 rounded"
-                 style="width: 32px; height: 32px;">
-            <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-                <strong class="d-block text-gray-dark">Course Units</strong>
-                {{ coursedata.course_units }}
-            </p>
-        </div>
-        <div class="media text-muted pt-3">
-            <img src="https://cdn.bootcss.com/open-iconic/1.1.1/svg/chat.svg" class="mr-2 rounded"
-                 style="width: 32px; height: 32px;">
-            <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-                <strong class="d-block text-gray-dark">Division · Major</strong>
-                <label class="badge badge-warning">{{ coursedata.course_division }}</label> · <label
-                    class="badge badge-primary">{{ coursedata.course_major }}</label>
-            </p>
-        </div>
-        <div class="media text-muted pt-3">
-            <img src="https://cdn.bootcss.com/open-iconic/1.1.1/svg/info.svg" class="mr-2 rounded"
-                 style="width: 32px; height: 32px;">
-            <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-                <strong class="d-block text-gray-dark">Course Descriptions</strong>
-                {{ coursedata.course_descriptions }}
-            </p>
-        </div>
         <small class="d-block text-right mt-3">
             {% if user.groups.all.0.name == "course_master" %}
                 <a href="{% url 'course_detail_edit' coursedata.id %}">Update Information</a> |
