--- a/course/templates/account/edit.html
+++ b/course/templates/account/edit.html
@@ -37,11 +37,11 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                         {% if user.is_superuser %}
                             <h6 class="dropdown-header">Admin function</h6>
-                            <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                            <a class="dropdown-item" href="{% url 'dashboard_interface' %}">Dashboard</a>
                             <div class="dropdown-divider"></div>
                         {% endif %}
                         <h6 class="dropdown-header">Account Relative</h6>
-                        <a class="dropdown-item active" href="{% url 'account_info_view' %}">Account Information</a>
+                        <a class="dropdown-item" href="{% url 'account_info_view' %}">Account Information</a>
                         <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
                     </div>
                 </li>
