--- a/course/templates/course/detail_edit.html
+++ b/course/templates/course/detail_edit.html
@@ -37,7 +37,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                         {% if user.is_superuser %}
                             <h6 class="dropdown-header">Admin function</h6>
-                            <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                            <a class="dropdown-item" href="{% url 'dashboard_interface' %}">Dashboard</a>
                             <div class="dropdown-divider"></div>
                         {% endif %}
                         <h6 class="dropdown-header">Account Relative</h6>
