--- a/course/templates/tools/dashboard.html
+++ b/course/templates/tools/dashboard.html
@@ -98,7 +98,6 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                         {% if user.is_superuser %}
                             <h6 class="dropdown-header">Admin function</h6>
-                            <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
                             <a class="dropdown-item active" href="{% url 'dashboard_interface' %}">Dashboard</a>
                             <div class="dropdown-divider"></div>
                         {% endif %}
@@ -266,7 +265,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{% url 'invitation_code' %}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                      fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                      stroke-linejoin="round" class="feather feather-file-text">
