--- a/course/templates/tools/invitation.html
+++ b/course/templates/tools/invitation.html
@@ -149,14 +149,14 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="{% url 'dashboard_interface' %}">
+                            <a class="nav-link" href="{% url 'dashboard_interface' %}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                      fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                      stroke-linejoin="round" class="feather feather-home">
                                     <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                                     <polyline points="9 22 9 12 15 12 15 22"></polyline>
                                 </svg>
-                                Dashboard <span class="sr-only">(current)</span>
+                                Dashboard
                             </a>
                         </li>
                         <li class="nav-item">
@@ -265,7 +265,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'invitation_code' %}">
+                            <a class="nav-link active" href="{% url 'invitation_code' %}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                      fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                      stroke-linejoin="round" class="feather feather-file-text">
@@ -299,30 +299,36 @@
                                 <line x1="8" y1="2" x2="8" y2="6"></line>
                                 <line x1="3" y1="10" x2="21" y2="10"></line>
                             </svg>
-                            All Course
+                            All Codes
                         </button>
                     </div>
                 </div>
-                <h4>Course List</h4>
+                <form action="{% url 'invitation_code' %}" method="post" style="padding-bottom: 1rem">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label class="text-white">Generate New Code(s)</label>
+                        <input type="text" class="form-control" placeholder="How Many?" name="amount">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Generate</button>
+                </form>
+                <h4>Invitation Codes List</h4>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
                         <tr>
                             <th>#</th>
-                            <th>Course Name</th>
-                            <th>Course Code</th>
-                            <th>Categories</th>
-                            <th>Division / Major</th>
+                            <th>Code</th>
+                            <th>Usability</th>
+                            <th>Operation</th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for course in courses %}
+                        {% for code in codes %}
                             <tr>
-                                <td>{{ course.id }}</td>
-                                <td>{{ course.course_name_en }}</td>
-                                <td>{{ course.course_code }}</td>
-                                <td>{{ course.course_category }}</td>
-                                <td>{{ course.course_division }} / {{ course.course_major }}</td>
+                                <td>{{ code.id }}</td>
+                                <td>{{ code.invitation_code }}</td>
+                                <td>{{ code.usability }}</td>
+                                <td><a href="{% url 'invitation_code_invalid' code.id %}">Delete</a></td>
                             </tr>
                         {% endfor %}
                         </tbody>
