--- a/course/templates/tools/users.html
+++ b/course/templates/tools/users.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Invitation code | Course Index</title>
+    <title>Users | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
@@ -156,7 +156,7 @@
                                     <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                                     <polyline points="9 22 9 12 15 12 15 22"></polyline>
                                 </svg>
-                                Dashboard
+                                Dashboard <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -171,7 +171,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url "dashboard_users" %}">
+                            <a class="nav-link active" href="{% url "dashboard_users" %}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                      fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                      stroke-linejoin="round" class="feather feather-users">
@@ -265,7 +265,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="{% url 'invitation_code' %}">
+                            <a class="nav-link" href="{% url 'invitation_code' %}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                      fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                      stroke-linejoin="round" class="feather feather-file-text">
@@ -285,56 +285,27 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                     <h1 class="h2">Dashboard</h1>
-                    <div class="btn-toolbar mb-2 mb-md-0">
-                        <div class="btn-group mr-2">
-                            <button class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button class="btn btn-sm btn-outline-secondary">Export</button>
-                        </div>
-                        <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" class="feather feather-calendar">
-                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-                                <line x1="16" y1="2" x2="16" y2="6"></line>
-                                <line x1="8" y1="2" x2="8" y2="6"></line>
-                                <line x1="3" y1="10" x2="21" y2="10"></line>
-                            </svg>
-                            All Codes
-                        </button>
-                    </div>
                 </div>
-                <form action="{% url 'invitation_code' %}" method="post" style="padding-bottom: 1rem">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label class="text-white">Generate New Code(s)</label>
-                        <input type="text" class="form-control" placeholder="How Many?" name="amount">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Generate</button>
-                </form>
-                <h4>Invitation Codes List</h4>
+                <h4>User List</h4>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
                         <tr>
                             <th>#</th>
-                            <th>Code</th>
-                            <th>Usability</th>
-                            <th>Assigned</th>
-                            <th>Operation</th>
+                            <th>Username</th>
+                            <th>First name</th>
+                            <th>Last name</th>
+                            <th>Email</th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for code in codes %}
+                        {% for system_user in system_users %}
                             <tr>
-                                <td>{{ code.id }}</td>
-                                <td>{{ code.invitation_code }}</td>
-                                <td>{{ code.usability }}</td>
-                                <td>{{ code.who_register.username }}</td>
-                                <td>
-                                    {% if code.usability %}
-                                        <a href="{% url 'invitation_code_invalid' code.id %}">Invoke</a>
-                                    {% endif %}
-                                </td>
+                                <td>{{ system_user.id }}</td>
+                                <td>{{ system_user.username }}</td>
+                                <td>{{ system_user.first_name }}</td>
+                                <td>{{ system_user.last_name }}</td>
+                                <td>{{ system_user.email }}</td>
                             </tr>
                         {% endfor %}
                         </tbody>
