--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -101,32 +101,38 @@
         </div>
         {% endfor %}
     {% endif %}
-                            <div class="row">
+    <div class="row">
         <div class="col-md-8 border-right">
-            <h1>{{coursedata.course_code | upper}}: {{ coursedata.course_name_en }}</h1>
-            <p class="lead">{{coursedata.course_name_cn}}</p>
-            <p class="text-muted">Updated {{coursedata.pub_date}}</p>
+            <h1>{{ coursedata.course_code | upper }}: {{ coursedata.course_name_en }}</h1>
+            <p class="lead">{{ coursedata.course_name_cn }}</p>
+            <p class="text-muted">Updated {{ coursedata.pub_date }}</p>
             <div class="row">
                 <div class="col-md-6">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Course Code: <label class="badge badge-primary">{{coursedata.course_code | upper}}</label></li>
-                        <li class="list-group-item">Course Category: <label class="badge badge-info">{{coursedata.course_category}}</label></li>
-                        <li class="list-group-item">Course Units: <label class="badge badge-warning">{{coursedata.course_units}}</label></li>
+                        <li class="list-group-item">Course Code: <label
+                                class="badge badge-primary">{{ coursedata.course_code | upper }}</label></li>
+                        <li class="list-group-item">Course Category: <label
+                                class="badge badge-info">{{ coursedata.course_category }}</label></li>
+                        <li class="list-group-item">Course Units: <label
+                                class="badge badge-warning">{{ coursedata.course_units }}</label></li>
                     </ul>
                 </div>
                 <div class="col-md-6">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Division: <label class="badge badge-danger">{{coursedata.course_division}}</label></li>
-                        <li class="list-group-item">Major: <label class="badge badge-success">{{coursedata.course_major}}</label></li>
-                        <li class="list-group-item">Pre-Request: <label class="badge badge-dark">{% if coursedata.course_pre_request %}
-                            {{coursedata.course_pre_request}}
-                        {% else %}
-                        None
-                        {% endif %}</label></li>
+                        <li class="list-group-item">Division: <label
+                                class="badge badge-danger">{{ coursedata.course_division }}</label></li>
+                        <li class="list-group-item">Major: <label
+                                class="badge badge-success">{{ coursedata.course_major }}</label></li>
+                        <li class="list-group-item">Pre-Request: <label class="badge badge-dark">
+                            {% if coursedata.course_pre_request %}
+                                {{ coursedata.course_pre_request }}
+                            {% else %}
+                                None
+                            {% endif %}</label></li>
                     </ul>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Course Descriptions: {{coursedata.course_descriptions}}
+                    <li class="list-group-item">Course Descriptions: {{ coursedata.course_descriptions }}
                     </li>
                 </ul>
             </div>
@@ -137,7 +143,8 @@
                     <h4 class="card-text text-center">Overall Score</h4>
                 </div>
                 <div class="card-body">
-                    <p class="card-text text-center text-dark" style="font-size: 5rem"><span id="current_score">{{ course_vote_status.score|floatformat:1 }}</span>/<span
+                    <p class="card-text text-center text-dark" style="font-size: 5rem"><span
+                            id="current_score">{{ course_vote_status.score|floatformat:1 }}</span>/<span
                             class="h2 text-secondary">10</span></p>
                 </div>
             </div>
@@ -149,8 +156,8 @@
                     <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
                         {% if user_vote.vote_status == 0 %}
                             <button class="btn btn-outline-success" id="upvote_btn">
-                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                {{course_vote_status.upvote}}
+                                <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                                {{ course_vote_status.upvote }}
                             </button>
                             <button class="btn btn-outline-danger" id="downvote_btn">
                                 <i class="fa fa-thumbs-down" aria-hidden="true"></i>
@@ -159,19 +166,19 @@
                             {% if user_vote.vote_status == 1 %}
                                 <button class="btn btn-outline-success" id="upvote_btn">
                                     <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                                    {{course_vote_status.upvote}}
+                                    {{ course_vote_status.upvote }}
                                 </button>
                                 <button class="btn btn-outline-danger" id="downvote_btn">
-                                <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
-                            </button>
+                                    <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
+                                </button>
                             {% else %}
                                 <button class="btn btn-outline-success" id="upvote_btn">
-                                <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                {{course_vote_status.upvote}}
+                                    <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                                    {{ course_vote_status.upvote }}
                                 </button>
                                 <button class="btn btn-outline-danger" id="downvote_btn">
-                                <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
-                            </button>
+                                    <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
+                                </button>
                             {% endif %}
                         {% endif %}
                     </div>
@@ -179,12 +186,12 @@
             </div>
         </div>
     </div>
-        <small class="d-block text-right mt-3">
-            {% if user.groups.all.0.name == "course_master" %}
-                <a href="{% url 'course_detail_edit' coursedata.id %}">Update Information</a> |
-                <a href="javascript:AlertIt();">Delete This course</a>
-            {% endif %}
-        </small>
+    <small class="d-block text-right mt-3">
+        {% if user.groups.all.0.name == "course_master" %}
+            <a href="{% url 'course_detail_edit' coursedata.id %}">Update Information</a> |
+            <a href="javascript:AlertIt();">Delete This course</a>
+        {% endif %}
+    </small>
     </div>
     <br>
     <div class="card box-shadow">
@@ -194,11 +201,13 @@
                 <div class="col-md-4">
                     <h4 class="text-md-center">Rigorousness</h4>
                     <div class="custom-control custom-radio">
-                        <input type="radio" id="rigorousnessRadio1" name="rigorousnessRadio" class="custom-control-input">
+                        <input type="radio" id="rigorousnessRadio1" name="rigorousnessRadio"
+                               class="custom-control-input">
                         <label class="custom-control-label" for="rigorousnessRadio1">The teacher is very strict</label>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input type="radio" id="rigorousnessRadio2" name="rigorousnessRadio" class="custom-control-input">
+                        <input type="radio" id="rigorousnessRadio2" name="rigorousnessRadio"
+                               class="custom-control-input">
                         <label class="custom-control-label" for="rigorousnessRadio2">The teacher is not strict</label>
                     </div>
                 </div>
@@ -232,7 +241,8 @@
                           'Not working',
                           'This function is still under construction',
                           'warning'
-                        );">Submit your tag set</button>
+                        );">Submit your tag set
+                    </button>
                 </div>
             </div>
         </div>
@@ -373,7 +383,8 @@
                 <div class="modal-body">
                     {% csrf_token %}
                     <label>Notice: Please keep <b>objective</b> when you comment on the course. Comments <b>may be
-                        deleted</b> if there is an insult to the teacher. (Comment function will remove in the future version)</label>
+                        deleted</b> if there is an insult to the teacher. (Comment function will remove in the future
+                        version)</label>
                     <input type="hidden" value="{{ user_comment.id }}" name="comment_id">
                     <div class="form-group">
                         <textarea class="form-control" rows="5" placeholder="Comments"
@@ -414,9 +425,10 @@
             return false;
         }
     }
+
     var voted = 0;
     $("#upvote_btn").click(function () {
-        if (!voted){
+        if (!voted) {
             $.ajax({
                 url: '{% url 'vote_course' coursedata.id %}',
                 data: {
@@ -424,16 +436,16 @@
                 },
                 dataType: 'json',
                 success: function (data) {
-                    if (data.is_success){
+                    if (data.is_success) {
                         console.log(data.new_upvote)
                         $("#upvote_btn").html("<i class=\"fa fa-thumbs-up\" aria-hidden=\"true\"></i>\n" + (parseInt(data.new_upvote)));
                         $("#downvote_btn").html("<i class=\"fa fa-thumbs-o-down\" aria-hidden=\"true\"></i>\n");
                         voted = 1;
                         $("#current_score").html(data.current_score.toFixed(1));
                         swal(
-                          'Voted!',
-                          'You have successfully given this class an up vote.',
-                          'success'
+                            'Voted!',
+                            'You have successfully given this class an up vote.',
+                            'success'
                         )
                     }
                 }
@@ -441,7 +453,7 @@
         }
     });
     $("#downvote_btn").click(function () {
-        if (!voted){
+        if (!voted) {
             $.ajax({
                 url: '{% url 'vote_course' coursedata.id %}',
                 data: {
@@ -449,16 +461,16 @@
                 },
                 dataType: 'json',
                 success: function (data) {
-                    if (data.is_success){
+                    if (data.is_success) {
                         console.log(data.new_upvote)
                         $("#upvote_btn").html("<i class=\"fa fa-thumbs-o-up\" aria-hidden=\"true\"></i>\n" + (parseInt(data.new_upvote)));
                         $("#downvote_btn").html("<i class=\"fa fa-thumbs-down\" aria-hidden=\"true\"></i>\n");
                         voted = 1;
                         $("#current_score").html(data.current_score.toFixed(1));
                         swal(
-                          'Voted!',
-                          'You have successfully given this class a down vote.',
-                          'success'
+                            'Voted!',
+                            'You have successfully given this class a down vote.',
+                            'success'
                         )
                     }
                 }
