--- a/course/templates/course/signup.html
+++ b/course/templates/course/signup.html
@@ -81,7 +81,8 @@
                                    id="id_invitationcode">
                             <label id="id_invitationcode_label"></label>
                         </div>
-                        <button type="submit" class="btn btn-success" id="submit_btn" disabled="disabled">Sign up</button>
+                        <button type="submit" class="btn btn-success" id="submit_btn" disabled="disabled">Sign up
+                        </button>
                         <a href="{% url 'home_page' %}" class="btn btn-primary">Back</a>
                     </form>
                 </div>
@@ -121,7 +122,7 @@
     }
 
     function isPasswordValid(password) {
-        var regex =/^(?!([a-zA-Z]+|\d+)$)[a-zA-Z\d]{8,20}$/;
+        var regex = /^(?!([a-zA-Z]+|\d+)$)[a-zA-Z\d]{8,20}$/;
         return regex.test(password)
     }
 
@@ -140,11 +141,11 @@
                     $("#id_email").addClass('is-invalid');
                     $("#id_email_label").html('<span class="text-danger">A user with this email already exists.</span>');
                 } else {
-                    if(isEmail($("#id_email").val())){
+                    if (isEmail($("#id_email").val())) {
                         $("#id_email").removeClass('is-invalid');
                         $("#id_email").addClass('is-valid');
                         $("#id_email_label").html('<span class="text-success">This email is ready to go.</span>');
-                    }else{
+                    } else {
                         $("#id_email").removeClass('is-valid');
                         $("#id_email").addClass('is-invalid');
                         $("#id_email_label").html('<span class="text-danger">Wrong email format.</span>');
@@ -169,11 +170,11 @@
                     $("#id_username").addClass('is-invalid');
                     $("#id_username_label").html('<span class="text-danger">This username already exists.</span>');
                 } else {
-                    if($("#id_username").val() != ''){
+                    if ($("#id_username").val() != '') {
                         $("#id_username").removeClass('is-invalid');
                         $("#id_username").addClass('is-valid');
                         $("#id_username_label").html('<span class="text-success">This username is ready to go.</span>');
-                    }else{
+                    } else {
                         $("#id_username").removeClass('is-valid');
                         $("#id_username").addClass('is-invalid');
                         $("#id_username_label").html('<span class="text-danger">Username cannot be empty.</span>');
@@ -205,22 +206,22 @@
             }
         });
     });
-    $("#id_password").change(function (){
-        if(isPasswordValid($("#id_password").val())){
+    $("#id_password").change(function () {
+        if (isPasswordValid($("#id_password").val())) {
             $("#id_password").removeClass('is-invalid');
             $("#id_password").addClass('is-valid');
             $("#id_password_label").html('<span class="text-success">The password is in the correct format.</span>');
-        }else{
+        } else {
             $("#id_password").removeClass('is-valid');
             $("#id_password").addClass('is-invalid');
             $("#id_password_label").html('<span class="text-danger">Wrong password format. The password length is 8-20, you need to include both numbers and letters.</span>');
         }
     });
     $("#id_signup_form").change(function () {
-        setTimeout(function (){
-            if($("#id_signup_form").html().indexOf("is-invalid") > 0){
+        setTimeout(function () {
+            if ($("#id_signup_form").html().indexOf("is-invalid") > 0) {
                 $("#submit_btn").attr("disabled", "disabled")
-            }else{
+            } else {
                 $("#submit_btn").removeAttr("disabled")
             }
         }, 100);
