--- a/dashboard/templates/index/header.html
+++ b/dashboard/templates/index/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">uicCourse</a>
+            <a class="navbar-brand" href="{% url 'welcome_page' %}">uicCourse</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavigationBar"
                     aria-controls="topNavigationBar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,7 @@
             <div class="collapse navbar-collapse" id="topNavigationBar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'welcome_page' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Course</a>
@@ -20,16 +20,26 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Sign up</a></li>
+                    {% if user.is_anonymous %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login_page' %}">Login</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="topNavigationBarDropDown"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign up</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="topNavigationBarDropDown">
-                            <a class="dropdown-item" href="#">Not Available</a>
-                            <a class="dropdown-item" href="#">Not Available</a>
-                            <a class="dropdown-item" href="#">Not Available</a>
+                            <a class="dropdown-item" href="#">Terms of Service</a>
+                            <a class="dropdown-item" href="#">Privacy Statement</a>
+                            <a class="dropdown-item" href="{% url 'signup_page' %}">Sign Up</a>
                         </div>
                     </li>
+                    {% else %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="topNavigationBarDropDown"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="topNavigationBarDropDown">
+                            <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
+                        </div>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
