--- a/dashboard/templates/index/login.html
+++ b/dashboard/templates/index/login.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>uicCourse</title>
+    <title>uicCourse | login</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -35,31 +35,17 @@
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
     <h1 class="mt-lg-5 mt-md-3">uicCourse</h1>
-    <p class="lead">For a more transparent future.</p>
-    <p>All information are collected from the Internet (AR's Website), for reference only.</p>
-    <div class="card-deck mt-md-5">
-        <div class="card">
-            <img class="card-img-top" src="https://source.unsplash.com/random/601x450" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Course Information</h5>
-                <p class="card-text">Well-organized data and beautiful display</p>
-            </div>
+    <form action="{% url 'login_page' %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Username" name="username">
         </div>
-        <div class="card">
-            <img class="card-img-top" src="https://source.unsplash.com/random/602x450" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Rate Course</h5>
-                <p class="card-text">If you have taken this course, you can rate this course and provide references for other students.</p>
-            </div>
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
-        <div class="card">
-            <img class="card-img-top" src="https://source.unsplash.com/random/603x450" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">View Report</h5>
-                <p class="card-text">We will analyze and provide reports based on the data we have obtained.</p>
-            </div>
-        </div>
-    </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+        <a href="#" class="btn btn-success">Sign up</a>
+    </form>
 </main>
 {% include "index/footer.html" %}
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
