auto hide alert

--- a/dashboard/templates/index/footer.html
+++ b/dashboard/templates/index/footer.html
@@ -3,3 +3,13 @@
         <span class="text-muted">A <a href="https://uichcc.com">UICHCC Computer Society</a> Project</span>
     </div>
 </footer>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/popper.js/1.14.3/esm/popper.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script>
+    window.setTimeout(function() {
+    $(".alert").fadeTo(500, 0).slideUp(500, function(){
+        $(this).remove();
+    });
+}, 2000);
+</script>
