--- a/dashboard/templates/index/index.html
+++ b/dashboard/templates/index/index.html
@@ -34,7 +34,7 @@
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
-    <h1 class="mt-lg-5 mt-md-3">uicCourse</h1>
+    <h1 class="mt-md-3">uicCourse</h1>
     <p class="lead">For a more transparent future.</p>
     <p>All information are collected from the Internet (AR's Website), for reference only.</p>
     <div class="card-deck mt-md-5">
@@ -62,8 +62,5 @@
     </div>
 </main>
 {% include "index/footer.html" %}
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/popper.js/1.14.3/esm/popper.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
