Welcome page enhanced

--- a/dashboard/templates/index/index.html
+++ b/dashboard/templates/index/index.html
@@ -36,7 +36,7 @@
 <main role="main" class="container mb-5">
     <h1 class="mt-md-3">uicCourse</h1>
     <p class="lead">For a more transparent future.</p>
-    <p>All information are collected from the Internet (AR's Website), for reference only.</p>
+    <p>All information is collected from the Internet (AR's Website), for reference only.</p>
     <div class="card-deck mt-md-5">
         <div class="card">
             <img class="card-img-top" src="https://source.unsplash.com/random/601x450" alt="Card image cap">
