--- a/dashboard/templates/index/footer.html
+++ b/dashboard/templates/index/footer.html
@@ -1,6 +1,7 @@
 <footer style="position: absolute; bottom: 0; width: 100%; height: 60px; line-height: 60px; background-color: #f5f5f5;">
-    <div class="container">
+    <div class="container d-flex justify-content-between">
         <span class="text-muted">A <a href="https://uichcc.com">UICHCC Computer Society</a> Project</span>
+        <span class="text-muted"><a href="{% url 'terms_page' %}">Terms</a> · <a href="{% url 'privacy_page' %}">Privacy</a></span>
     </div>
 </footer>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
