--- a/dashboard/templates/index/header.html
+++ b/dashboard/templates/index/header.html
@@ -13,7 +13,7 @@
                         <a class="nav-link" href="{% url 'welcome_page' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Course</a>
+                        <a class="nav-link disabled" href="{% url 'course_list_page' %}">Course</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Report</a>
@@ -26,8 +26,8 @@
                         <a class="nav-link dropdown-toggle" href="#" id="topNavigationBarDropDown"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign up</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="topNavigationBarDropDown">
-                            <a class="dropdown-item" href="#">Terms of Service</a>
-                            <a class="dropdown-item" href="#">Privacy Statement</a>
+                            <a class="dropdown-item" href="{% url 'terms_page' %}">Terms of Service</a>
+                            <a class="dropdown-item" href="{% url 'privacy_page' %}">Privacy Statement</a>
                             <a class="dropdown-item" href="{% url 'signup_page' %}">Sign Up</a>
                         </div>
                     </li>
