--- a/dashboard/templates/index/login.html
+++ b/dashboard/templates/index/login.html
@@ -34,7 +34,7 @@
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
-    <h1 class="mt-lg-5 mt-md-3">uicCourse</h1>
+    <h1 class="mt-lg-5 mt-md-3">Login in uicCourse</h1>
     <form action="{% url 'login_page' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
