fix the link to sign up page

--- a/dashboard/templates/index/login.html
+++ b/dashboard/templates/index/login.html
@@ -44,7 +44,7 @@
             <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
-        <a href="#" class="btn btn-success">Sign up</a>
+        <a href="{% url 'signup_page' %}" class="btn btn-success">Sign up</a>
     </form>
 </main>
 {% include "index/footer.html" %}
