enhance page UI

--- a/dashboard/templates/auth/change_password.html
+++ b/dashboard/templates/auth/change_password.html
@@ -40,7 +40,8 @@
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
-    <h1 class="mt-lg-5 mt-md-3">Change your password</h1>
+    <h1 class="mt-md-3">Change your password</h1>
+    {% include "dashboard/functions.html" %}
     <form method="post">
         {% csrf_token %}
         {% for field in form %}
