--- a/dashboard/templates/auth/signup.html
+++ b/dashboard/templates/auth/signup.html
@@ -40,7 +40,7 @@
 {% include "index/header.html" %}
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
-    <h1 class="mt-lg-5 mt-md-3">Sign up uicCourse</h1>
+    <h1 class="mt-md-3">Sign up uicCourse</h1>
     <form method="post">
         {% csrf_token %}
         {% for field in form %}
